Fix sync-wave value

--- a/project/project.yaml
+++ b/project/project.yaml
@@ -3,4 +3,4 @@ kind: Project
 metadata:
   name: base-project
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/sync-wave: -1
